Upgrade jetty to 7.6.17